# wolframphysics

./: README.md  bokeh_app.py  bokeh_app_simple.py  pyproject.toml  wolfram_physics_implementation.md
examples/: basic_demo.py  final_state.json  hypergraph_3d.html  initial_state.json  interactive_demo.py
examples/data_storage/: basic_demo_20250706_214928.json  basic_demo_20250706_222137.json  metadata.json
examples/workflow_data/: metadata.json  workflow_final_20250706_214928.json  workflow_final_20250706_222137.json  workflow_initial_20250706_214928.json  workflow_initial_20250706_222137.json
src/wolfram_physics/: __init__.py  data_manager.py  hypergraph_processor.py  interactive_visualizer.py  rule_engine.py  visualizer.py  visualizer_3d.py
tests/: __init__.py  test_hypergraph_processor.py  test_rule_engine.py
